--- a/index.html
+++ b/index.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
-<html lang=en>
+<html lang="en">
     <head>
         <title>Javascript Form Validation</title>
         <link href="./css/main.css" type="text/css" rel="stylesheet"/>
         <script src="./script.js" async></script>
     </head>
     <body>
-        <form>
-            <label for="mail">I would like you to provide me with an e-mail address:</label>
-            <input type="email" id="mail" name="mail"/>
-            <button>Submit</button>
-        </form>
-        <!--
-        <script>
-            const email = document.getElementById("mail");
-          
-            email.addEventListener("input", function (event) {
-              if (email.validity.typeMismatch) {
-                email.setCustomValidity("I am expecting an e-mail address!");
-              } else {
-                email.setCustomValidity("");
-              }
-            });
-            </script>
-        -->
+       <form id="form" novalidate>
+           <p>
+            <label for="mail">
+                <span>Please enter an email address:</span>
+                <input type="email" id="mail" name="mail" required minlength="8"/>
+                <span class="error" aria-live="polite"></span>
+            </label>
+           </p>
+           <button>Submit</button>
+       </form>
     </body>
 </html>
